updated javadoc comments for api